--- a/histora-care/src/app/patient/tracking/tracking.page.scss
+++ b/histora-care/src/app/patient/tracking/tracking.page.scss
@@ -734,6 +734,7 @@
   flex-direction: column;
   align-items: center;
   flex: 1 0 0;
+  min-width: 0;
   transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 
   .step-dot {
